<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="muffininc.legomindstormsmarch23.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Status_Signal"
        android:id="@+id/StatusSign"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp" />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/one_button"
    android:id="@+id/one_button"
    android:layout_below="@+id/StatusSign"
    android:layout_alignLeft="@+id/StatusSign"
    android:layout_alignStart="@+id/StatusSign"
    android:layout_marginTop="57dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backy"
        android:id="@+id/back_button"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/one_button"
        android:layout_toRightOf="@+id/one_button"
        android:layout_toEndOf="@+id/one_button" />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/frontal"
    android:id="@+id/front_button"
    android:layout_below="@+id/one_button"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="19dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lefty"
        android:id="@+id/left_button"
        android:layout_below="@+id/front_button"
        android:layout_toLeftOf="@+id/front_button"
        android:layout_toStartOf="@+id/front_button" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/righty"
        android:id="@+id/right_button"
        android:layout_below="@+id/front_button"
        android:layout_toRightOf="@+id/front_button"
        android:layout_toEndOf="@+id/front_button" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue_text"
        android:id="@+id/bluetooth_button"
        android:layout_alignTop="@+id/one_button"
        android:layout_alignRight="@+id/right_button"
        android:layout_alignEnd="@+id/right_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluecheck1"
        android:id="@+id/bluetoothproof1"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/bluetoothproof2"
        android:layout_toStartOf="@+id/bluetoothproof2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluecheck2"
        android:id="@+id/bluetoothproof2"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/one_button"
        android:layout_toEndOf="@+id/one_button" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluecheck3"
        android:id="@+id/bluetoothproof3"
        android:layout_below="@+id/bluetoothproof1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluecheck4"
        android:id="@+id/bluetoothproof4"
        android:layout_below="@+id/bluetoothproof2"
        android:layout_toRightOf="@+id/bluetoothproof3"
        android:layout_toEndOf="@+id/bluetoothproof3" />

</RelativeLayout>
